@startuml
class adapters.MemoryGameLogAdapter {
- Map<String,String> uidToNameMap
+ void setRooms(List<GameRoom>)
+ void submitData(List<GameRoom>,Map<String,String>)
+ ViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(ViewHolder,int)
}


class adapters.MemoryGameLogAdapter$ViewHolder {
~ TextView txtPlayers
}

class adapters.UsersTableAdapter {
- ImageUtil imageUtil
- CalendarUtil calendarUtil
- OnUserActionListener listener
+ void init(OnUserActionListener)
+ void setUserList(List<User>)
+ UserViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(UserViewHolder,int)
}


interface adapters.UsersTableAdapter$OnUserActionListener {
~ void onToggleAdmin(User)
~ void onDeleteUser(User)
~ void onUserClicked(User)
~ void onUserImageClicked(User,ImageView)
}

class adapters.UsersTableAdapter$UserViewHolder {
~ TextView txtUserFullName
~ ImageButton btnDeleteUser
~ ImageView imgUserProfile
}



bases.BaseAdapter <|-- adapters.MemoryGameLogAdapter
adapters.MemoryGameLogAdapter +.. adapters.MemoryGameLogAdapter$ViewHolder
adapters.ViewHolder <|-- adapters.MemoryGameLogAdapter$ViewHolder
bases.BaseAdapter <|-- adapters.UsersTableAdapter
adapters.UsersTableAdapter +.. adapters.UsersTableAdapter$OnUserActionListener
adapters.UsersTableAdapter +.. adapters.UsersTableAdapter$UserViewHolder
adapters.ViewHolder <|-- adapters.UsersTableAdapter$UserViewHolder
@enduml